--- a/frontend/src/app/components/resources/resources.component.html
+++ b/frontend/src/app/components/resources/resources.component.html
@@ -20,7 +20,7 @@
     <!-- Resources List -->
     <div *ngIf="!isLoading && resources.length > 0" class="space-y-6">
       <div *ngFor="let resource of resources" class="group">
-        <h3 class="text-xl font-semibold text-blue-600 hover:text-blue-700 transition-colors duration-200 cursor-pointer">
+        <h3 class="text-xl font-semibold text-blue-600 hover:text-blue-700 hover:underline transition-all duration-200 cursor-pointer">
           {{resource.title}}
         </h3>
         <p class="text-gray-600 mt-2">
